--- a/html/main.html
+++ b/html/main.html
@@ -11,12 +11,12 @@
 <body>
     <div class="container">
         <div id="header">
-            <ul id="headerList">
-                <li>Мобильные телефоны</li>
-                <li>Планшеты</li>
-                <li>Фототехника</li>
-                <li>Ноутбуки</li>
-            </ul>
+            <div id="header-wrapper">
+                <a href="#">МОБИЛЬНЫЕ ТЕЛЕФОНЫ</a>
+                <a href="#">ПЛАНШЕТЫ</a>
+                <a href="#">ФОТОТЕХНИКА</a>
+                <a href="#">НОУТБУКИ</a>
+            </div>
         </div>
     </div>
 </body>
