--- a/html/main.html
+++ b/html/main.html
@@ -7,17 +7,31 @@
     <title>Camera shop</title>
     <link rel="stylesheet" type="text/css" href="../css/camerastore.css">
     <link rel="stylesheet" type="text/css" href="../css/header.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="container">
-        <div id="header">
-            <div id="header-wrapper">
+        <div class="header">
+            <div class="header-wrapper">
                 <a href="#">МОБИЛЬНЫЕ ТЕЛЕФОНЫ</a>
                 <a href="#">ПЛАНШЕТЫ</a>
                 <a href="#">ФОТОТЕХНИКА</a>
                 <a href="#">НОУТБУКИ</a>
             </div>
+            <div class="header-basket">
+                <a href="#"><i class="fa fa-shopping-cart">КОРЗИНА</i></a>
+            </div>
         </div>
+        <div class="search-box">
+            <select class="search-box-select">
+                <option selected>ЛЮБОГО ТИПА</option>
+                <option>КОМПАКТ-КА</option>
+            </select>
+            <select class="search-box-select">
+                <option selected>ЛЮБОГО БРЭНДА</option>
+            </select>
+        </div>
+
     </div>
 </body>
 </html>
