--- a/html/main.html
+++ b/html/main.html
@@ -12,24 +12,77 @@
 <body>
     <div class="container">
         <div class="header">
-            <div class="header-wrapper">
+            <div class="header__wrapper">
                 <a href="#">МОБИЛЬНЫЕ ТЕЛЕФОНЫ</a>
                 <a href="#">ПЛАНШЕТЫ</a>
                 <a href="#">ФОТОТЕХНИКА</a>
                 <a href="#">НОУТБУКИ</a>
             </div>
-            <div class="header-basket">
+            <div class="header__basket">
                 <a href="#"><i class="fa fa-shopping-cart">КОРЗИНА</i></a>
             </div>
         </div>
         <div class="search-box">
-            <select class="search-box-select">
-                <option selected>ЛЮБОГО ТИПА</option>
-                <option>КОМПАКТ-КА</option>
-            </select>
-            <select class="search-box-select">
-                <option selected>ЛЮБОГО БРЭНДА</option>
-            </select>
+            <div class="select-container">
+                <select class="select-container__select">
+                    <option selected>ЛЮБОГО ТИПА</option>
+                    <option>КОМПАКТ-КАМЕРАaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</option>
+                </select>
+                <select class="select-container__select">
+                    <option selected>ЛЮБОГО БРЭНДА</option>
+                </select>
+            </div>
+            <div class="price-container">
+                <span class="price-container__span_right-offset">ПО ЦЕНЕ</span>
+                <div class="price-container__wrapper">
+                    <label class="price-container__label">ОТ</label>
+                    <input class="price-container__from-input" type="number">
+                    <label class="price-container__label">ДО</label>
+                    <input class="price-container__to-input" type="number">
+                </div>
+                <span class="price-container__span_left-offset">РУБЛЕЙ</span>
+            </div>
+        </div>
+        <div class="content">
+            <div class="content__item">
+                <div class="content__img-wrapper">
+                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
+                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
+                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
+                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
+                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
+                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
+                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
+                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
+                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
+                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
+                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
+                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
+                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
+                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
+                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
+                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
+                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
+                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
+                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
+                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
+                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
+                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
+
+                </div>
+                <div class="content__description-wrapper">
+
+                </div>
+                <div class="content__price-wrapper">
+
+                </div>
+            </div>
+            <div class="content__item"></div>
+            <div class="content__item"></div>
+            <div class="content__item"></div>
+            <div class="content__item"></div>
+            <div class="content__item"></div>
+            <div class="content__item"></div>
         </div>
 
     </div>
