Added changes to header and search box

--- a/html/main.html
+++ b/html/main.html
@@ -17,9 +17,7 @@
                 <a href="#">ПЛАНШЕТЫ</a>
                 <a href="#">ФОТОТЕХНИКА</a>
                 <a href="#">НОУТБУКИ</a>
-            </div>
-            <div class="header__basket">
-                <a href="#"><i class="fa fa-shopping-cart">КОРЗИНА</i></a>
+                <a class="header__basket" href="#"><i class="fa fa-shopping-cart">КОРЗИНА</i></a>
             </div>
         </div>
         <div class="search-box">
