Changed price container

--- a/html/main.html
+++ b/html/main.html
@@ -31,14 +31,16 @@
                 </select>
             </div>
             <div class="price-container">
-                <span class="price-container__span_right-offset">ПО ЦЕНЕ</span>
+                <span>ПО ЦЕНЕ</span>
                 <div class="price-container__wrapper">
                     <label class="price-container__label">ОТ</label>
-                    <input class="price-container__from-input" type="number">
-                    <label class="price-container__label">ДО</label>
-                    <input class="price-container__to-input" type="number">
+                    <input class="price-container__input" type="number">
                 </div>
-                <span class="price-container__span_left-offset">РУБЛЕЙ</span>
+                <div class="price-container__wrapper price-container__to-input_left">
+                    <label class="price-container__label">ДО</label>
+                    <input class="price-container__input" type="number">
+                </div>
+                <span >РУБЛЕЙ</span>
             </div>
         </div>
         <div class="content">
