--- a/html/main.html
+++ b/html/main.html
@@ -46,35 +46,23 @@
         <div class="content">
             <div class="content__item">
                 <div class="content__img-wrapper">
-                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
-                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
-                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
-                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
-                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
-                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
-                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
-                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
-                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
-                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
-                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
-                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
-                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
-                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
-                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
-                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
-                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
-                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
-                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
-                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
-                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
-                    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
-
+                    <img src="../png/cameras/frontpage.jpeg" class="content__img"/>
                 </div>
                 <div class="content__description-wrapper">
-
+                    <h3>Lorem ipsum dolor sit amet, consectetur</h3>
+                    <!--<p>of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,-->
+                        <!--remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more-->
+                        <!--recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.-->
+                        <!--recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.-->
+                        <!--recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.-->
+                        <!--recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.-->
+                        <!--recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.-->
+                        <!--recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.-->
+                        <!--recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.-->
+                    <!--</p>-->
                 </div>
                 <div class="content__price-wrapper">
-
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
                 </div>
             </div>
             <div class="content__item"></div>
