Start working on a large image

--- a/html/main.html
+++ b/html/main.html
@@ -45,87 +45,84 @@
         </div>
         <div class="content">
             <div class="content__item">
-                <div class="content__img-wrapper ">
-                    <img src="../png/cameras/fujifilm_xe2.jpg" class="content__img"/>
-                </div>
-                <div class="content__description-wrapper">
-                    <div class="content__item__h3">
+                <div class="entire-content">
+                    <div class="content__img-wrapper ">
+                        <img src="../png/cameras/fujifilm_xe2.jpg" class="content__img"/>
+                    </div>
+                    <div class="content__description-wrapper">
                         <h3>Fujifilm X-E2 Kit 18-55mm</h3>
+                        <p>Беззеркальная камера со сменными объективами,пришедшая на смену модели X-E1. В камере используется 16.3 Мп.
+                            матрица X-Trans CMOS II формата APS-C (23.6 x 15.6 мм), обрабатывающая диапазон чувствительности от 200 до 25600 ISO.
+                        </p>
                     </div>
-                    <p>Беззеркальная камера со сменными объективами,пришедшая на смену модели X-E1. В камере используется 16.3 Мп.
-                        матрица X-Trans CMOS II формата APS-C (23.6 x 15.6 мм), обрабатывающая диапазон чувствительности от 200 до 25600 ISO.
-                    </p>
-                </div>
-                <div class="content__price-wrapper">
-                    <p>1300,00 р</p>
+                    <div class="content__price-wrapper">
+                        <p>1300,00 р</p>
+                    </div>
                 </div>
             </div>
             <div class="content__item">
-                <div class="content__img-wrapper ">
-                    <img src="../png/cameras/x100s.jpg" class="content__img"/>
-                </div>
-                <div class="content__description-wrapper">
-                    <div class="content__item__h3">
+                <div class="entire-content">
+                    <div class="content__img-wrapper ">
+                        <img src="../png/cameras/x100s.jpg" class="content__img"/>
+                    </div>
+                    <div class="content__description-wrapper">
                         <h3>Fujifilm X100S</h3>
+                        <p>компакт-камера, матрица APS-C (1.5 crop) 16.3 Мп, F2 35 мм
+                        </p>
                     </div>
-                    <p>компакт-камера, матрица APS-C (1.5 crop) 16.3 Мп, F2 35 мм
-                    </p>
-                </div>
-                <div class="content__price-wrapper">
-                    <p>1200,00 р</p>
+                    <div class="content__price-wrapper">
+                        <p>1200,00 р</p>
+                    </div>
                 </div>
             </div>
             <div class="content__item">
-                <div class="content__img-wrapper ">
-                    <img src="../png/cameras/EOS-700d.jpg" class="content__img"/>
-                </div>
-                <div class="content__description-wrapper">
-                    <div class="content__item__h3">
+                <div class="entire-content">
+                    <div class="content__img-wrapper ">
+                        <img src="../png/cameras/EOS-700d.jpg" class="content__img"/>
+                    </div>
+                    <div class="content__description-wrapper">
                         <h3>Canon EOS 700D Kit 18-55 IS STM</h3>
+                        <p>Canon EOS 700D — самая новая зеркальная камера в «трехзначной» линейке EOS, ориентированной на новичков в фотографии.
+                            История этих фотоаппаратов насчитывает уже десять лет — целая эпоха по цифровым меркам.
+                        </p>
                     </div>
-                    <p>Canon EOS 700D — самая новая зеркальная камера в «трехзначной» линейке EOS, ориентированной на новичков в фотографии.
-                        История этих фотоаппаратов насчитывает уже десять лет — целая эпоха по цифровым меркам.
-                    </p>
-                </div>
-                <div class="content__price-wrapper">
-                    <p>1300,00 р</p>
+                    <div class="content__price-wrapper">
+                        <p>1300,00 р</p>
+                    </div>
                 </div>
             </div>
             <div class="content__item">
-                <div class="content__img-wrapper ">
-                    <img src="../png/cameras/Nikon3200.jpg" class="content__img"/>
-                </div>
-                <div class="content__description-wrapper">
-                    <div class="content__item__h3">
-                        <h3>Nikon D3200 Kit 18-55mm VRaaaaaaaaaaaaa</h3>
+                <div class="entire-content">
+                    <div class="content__img-wrapper ">
+                        <img src="../png/cameras/Nikon3200.jpg" class="content__img"/>
                     </div>
-                    <p>Любительская зеркальная камера начального уровня. Продолжение известной линейки D3100, получившей заслуженную популярность
-                        у начинающих фотографов. Основное качественное отличие устройства в 24.2 Мп CMOS–сенсоре и 3” дисплее с разрешением 921 000 пикселей.
-                        Камера получила интеллектуальную 11-точечну
-                    </p>
-                </div>
-                <div class="content__price-wrapper">
-                    <p>1300,00 р</p>
+                    <div class="content__description-wrapper">
+                        <h3>Nikon D3200 Kit 18-55mm VRaaaaaaaaaaaaa</h3>
+                        <p>Любительская зеркальная камера начального уровня. Продолжение известной линейки D3100, получившей заслуженную популярность
+                            у начинающих фотографов. Основное качественное отличие устройства в 24.2 Мп CMOS–сенсоре и 3” дисплее с разрешением 921 000 пикселей.
+                        </p>
+                    </div>
+                    <div class="content__price-wrapper">
+                        <p>1300,00 р</p>
+                    </div>
                 </div>
             </div>
             <div class="content__item content__item_large">
-                <div class="content__img-wrapper content__img-wrapper_large">
+                <div class="content__img-wrapper content__img-wrapper_flex">
                     <img src="../png/cameras/eos1200.jpg" class="content__img"/>
                 </div>
-                <div class="content__description-wrapper">
-                    <div class="content__item__h3">
-                        <h3>Nikon D3200 Kit 18-55mm VRaaaaaaaaaaaaa</h3>
+                <div class="entire-content entire-content_flex">
+                    <div class="content__description-wrapper">
+                        <h3>Nikon D3200 Kit 18-55mm VR</h3>
+                        <p>Любительская зеркальная камера начального уровня. Продолжение известной линейки D3100, получившей заслуженную популярность
+                            у начинающих фотографов. Основное качественное отличие устройства в 24.2 Мп CMOS–сенсоре и 3” дисплее с разрешением 921 000 пикселей.
+                        </p>
                     </div>
-                    <p>Любительская зеркальная камера начального уровня. Продолжение известной линейки D3100, получившей заслуженную популярность
-                        у начинающих фотографов. Основное качественное отличие устройства в 24.2 Мп CMOS–сенсоре и 3” дисплее с разрешением 921 000 пикселей.
-                        Камера получила интеллектуальную 11-точечну
-                    </p>
-                </div>
-                <div class="content__price-wrapper">
-                    <p>1300,00 р</p>
+                    <div class="content__price-wrapper">
+                        <p>1300,00 р</p>
+                    </div>
                 </div>
             </div>
-            <div class="content__item"></div>
             <div class="content__item"></div>
         </div>
 
