Large div is done

--- a/html/main.html
+++ b/html/main.html
@@ -108,7 +108,7 @@
                 </div>
             </div>
             <div class="content__item content__item_large">
-                <div class="content__img-wrapper content__img-wrapper_flex">
+                <div class="content__img-wrapper_flex">
                     <img src="../png/cameras/eos1200.jpg" class="content__img"/>
                 </div>
                 <div class="entire-content entire-content_flex">
@@ -118,14 +118,28 @@
                             у начинающих фотографов. Основное качественное отличие устройства в 24.2 Мп CMOS–сенсоре и 3” дисплее с разрешением 921 000 пикселей.
                         </p>
                     </div>
+                    <div class="content__price-wrapper cut-padding">
+                        <p>1300,00 р</p>
+                    </div>
+                </div>
+            </div>
+            <div class="content__item">
+                <div class="entire-content">
+                    <div class="content__img-wrapper ">
+                        <img src="../png/cameras/fujifilm_xe2.jpg" class="content__img"/>
+                    </div>
+                    <div class="content__description-wrapper">
+                        <h3>Fujifilm X-E2 Kit 18-55mm</h3>
+                        <p>Беззеркальная камера со сменными объективами,пришедшая на смену модели X-E1. В камере используется 16.3 Мп.
+                            матрица X-Trans CMOS II формата APS-C (23.6 x 15.6 мм), обрабатывающая диапазон чувствительности от 200 до 25600 ISO.
+                        </p>
+                    </div>
                     <div class="content__price-wrapper">
                         <p>1300,00 р</p>
                     </div>
                 </div>
             </div>
-            <div class="content__item"></div>
         </div>
-
     </div>
 </body>
 </html>
