--- a/html/main.html
+++ b/html/main.html
@@ -12,12 +12,18 @@
 <body>
     <div class="container">
         <div class="header">
+            <div class="header__wrapper header__wrapper_space-between">
+                <h1>ТЕХНОПАРК</h1>
+                <span>8 800 755 80 80</span>
+                <input type="search" placeholder="&#xf002; ПОИСК ТОВАРОВ">
+                <a class="header__wrapper_left-offset">ДОСТАВКА И ОПЛАТА</a>
+            </div>
             <div class="header__wrapper">
                 <a href="#">МОБИЛЬНЫЕ ТЕЛЕФОНЫ</a>
                 <a href="#">ПЛАНШЕТЫ</a>
                 <a href="#">ФОТОТЕХНИКА</a>
                 <a href="#">НОУТБУКИ</a>
-                <a class="header__basket" href="#"><i class="fa fa-shopping-cart">КОРЗИНА</i></a>
+                <a class="header__basket" href="#"><i class="fa fa-shopping-cart">&nbsp;КОРЗИНА</i></a>
             </div>
         </div>
         <div class="search-box">
