Added JQuery DropDown

--- a/html/main.html
+++ b/html/main.html
@@ -28,13 +28,20 @@
         </div>
         <div class="search-box">
             <div class="select-container">
-                <select class="select-container__select">
-                    <option selected>ЛЮБОГО ТИПА</option>
-                    <option>КОМПАКТ-КАМЕРАaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</option>
-                </select>
-                <select class="select-container__select">
-                    <option selected>ЛЮБОГО БРЭНДА</option>
-                </select>
+                  <a class="select-container__a"><span class="select-container__span">ЛЮБОГО ТИПА</span></a>
+                <ul class="select-container__ul">
+                    <li><a href="#">ЛЮБОГО ТИПА</a></li>
+                    <li><a href="#">КОМПАКТ-КАМЕРА</a></li>
+                    <li><a href="#">ЛЮБОГО БРЭНДА</a></li>
+                </ul>
+
+                <!--<select class="select-container__select">-->
+                    <!--<option selected>ЛЮБОГО ТИПА</option>-->
+                    <!--<option>КОМПАКТ-КАМЕРА</option>-->
+                <!--</select>-->
+                <!--<select class="select-container__select">-->
+                    <!--<option selected>ЛЮБОГО БРЭНДА</option>-->
+                <!--</select>-->
             </div>
             <div class="price-container">
                 <span>ПО ЦЕНЕ</span>
@@ -148,4 +155,6 @@
         </div>
     </div>
 </body>
+<script src="../js/jquery-3.2.1.js"></script>
+<script type="text/javascript" src="../js/common.js"></script>
 </html>
