--- a/html/main.html
+++ b/html/main.html
@@ -27,22 +27,22 @@
             </div>
         </div>
         <div class="search-box">
-            <div class="select-container">
-                  <a class="select-container__a"><span class="select-container__span">ЛЮБОГО ТИПА</span></a>
-                <ul class="select-container__ul">
-                    <li><a href="#">ЛЮБОГО ТИПА</a></li>
-                    <li><a href="#">КОМПАКТ-КАМЕРА</a></li>
-                    <li><a href="#">ЛЮБОГО БРЭНДА</a></li>
-                </ul>
-
-                <!--<select class="select-container__select">-->
-                    <!--<option selected>ЛЮБОГО ТИПА</option>-->
-                    <!--<option>КОМПАКТ-КАМЕРА</option>-->
-                <!--</select>-->
-                <!--<select class="select-container__select">-->
-                    <!--<option selected>ЛЮБОГО БРЭНДА</option>-->
-                <!--</select>-->
-            </div>
+          <div class="select-container">
+              <a id = "a_type" class="select-container__a"><span class="select-container__span">ЛЮБОГО ТИПА</span></a>
+              <ul id = "ul_type" class="select-container__ul">
+                  <li><a href="#">КОМПАКТ-КАМЕРА</a></li>
+                  <li><a href="#">ЛЮБОГО БРЭНДА</a></li>
+              </ul>
+          </div>
+          <div class="select-container">
+              <a id = "a_brand" class="select-container__a"><span class="select-container__span">ЛЮБОГО БРЭНДА</span></a>
+              <ul id = "ul_brand"class="select-container__ul">
+                  <li><a href="#">CANON</a></li>
+                  <li><a href="#">NIKON</a></li>
+                  <li><a href="#">SONY</a></li>
+                  <li><a href="#">PANASONIC</a></li>
+              </ul>
+          </div>
             <div class="price-container">
                 <span>ПО ЦЕНЕ</span>
                 <div class="price-container__wrapper">
