Mobile version almost completed

--- a/html/main.html
+++ b/html/main.html
@@ -29,23 +29,29 @@
                 <a class="header__basket" href="#"><i class="fa fa-shopping-cart">&nbsp;КОРЗИНА</i></a>
             </div>
         </div>
+        <div class="mobile-bar">
+            <div class="mobile-bar__wrapper">
+                <h2>ФОТОТЕХНИКА</h2>
+                <i class="fa fa-sliders fa-2x"></i>
+            </div>
+        </div>
         <div class="search-box">
-          <div class="select-container">
-              <a class="select-container__a"><span class="select-container__span">ЛЮБОГО ТИПА</span></a>
-              <ul class="select-container__ul">
-                  <li><a href="#">КОМПАКТ-КАМЕРА</a></li>
-                  <li><a href="#">ЛЮБОГО БРЭНДА</a></li>
-              </ul>
-          </div>
-          <div class="select-container">
-              <a class="select-container__a"><span class="select-container__span">ЛЮБОГО БРЭНДА</span></a>
-              <ul class="select-container__ul">
-                  <li><a href="#">CANON</a></li>
-                  <li><a href="#">NIKON</a></li>
-                  <li><a href="#">SONY</a></li>
-                  <li><a href="#">PANASONIC</a></li>
-              </ul>
-          </div>
+            <div class="select-container">
+                <a class="select-container__a"><span class="select-container__span">ЛЮБОГО ТИПА</span></a>
+                <ul class="select-container__ul">
+                    <li><a href="#">КОМПАКТ-КАМЕРА</a></li>
+                    <li><a href="#">ЛЮБОГО БРЭНДА</a></li>
+                </ul>
+            </div>
+            <div class="select-container">
+                <a class="select-container__a"><span class="select-container__span">ЛЮБОГО БРЭНДА</span></a>
+                <ul class="select-container__ul">
+                    <li><a href="#">CANON</a></li>
+                    <li><a href="#">NIKON</a></li>
+                    <li><a href="#">SONY</a></li>
+                    <li><a href="#">PANASONIC</a></li>
+                </ul>
+            </div>
             <div class="price-container">
                 <span>ПО ЦЕНЕ</span>
                 <div class="price-container__wrapper">
@@ -113,7 +119,7 @@
                         <img src="../png/cameras/Nikon3200.jpg" class="content__img"/>
                     </div>
                     <div class="content__description-wrapper">
-                        <h3>Nikon D3200 Kit 18-55mm VRaaaaaaaaaaaaa</h3>
+                        <h3>Nikon D3200 Kit 18-55mm VRaaaaaaaaaaa</h3>
                         <p>Любительская зеркальная камера начального уровня. Продолжение известной линейки D3100, получившей заслуженную популярность
                             у начинающих фотографов. Основное качественное отличие устройства в 24.2 Мп CMOS–сенсоре и 3” дисплее с разрешением 921 000 пикселей.
                         </p>
@@ -123,7 +129,7 @@
                     </div>
                 </div>
             </div>
-            <div class="content__item content__item_large">
+            <!-- <div class="content__item content__item_large">
                 <div class="content__img-wrapper_flex">
                     <img src="../png/cameras/eos1200.jpg" class="content__img"/>
                 </div>
@@ -136,6 +142,26 @@
                     </div>
                     <div class="content__price-wrapper cut-padding">
                         <p>1300,00 р</p>
+                    </div>
+                </div>
+            </div> -->
+            <div class="content__item_large">
+                <div class="content__item">
+                    <div class="content__img-wrapper_flex">
+                        <img src="../png/cameras/eos1200.jpg" class="content__img"/>
+                    </div>
+                </div>
+                <div class="content__item">
+                    <div class="entire-content">
+                        <div class="content__description-wrapper">
+                            <h3>Nikon D3200 Kit 18-55mm VR</h3>
+                            <p>Любительская зеркальная камера начального уровня. Продолжение известной линейки D3100, получившей заслуженную популярность
+                                у начинающих фотографов. Основное качественное отличие устройства в 24.2 Мп CMOS–сенсоре и 3” дисплее с разрешением 921 000 пикселей.
+                            </p>
+                        </div>
+                        <div class="content__price-wrapper">
+                            <p>1300,00 р</p>
+                        </div>
                     </div>
                 </div>
             </div>
