--- a/html/main.html
+++ b/html/main.html
@@ -32,8 +32,10 @@
         <div class="mobile-bar">
             <div class="mobile-bar__wrapper">
                 <h2>ФОТОТЕХНИКА</h2>
-                <i class="fa fa-sliders fa-2x"></i>
+                <i id="search-criteria" class="fa fa-sliders fa-2x"></i>
             </div>
+        </div>
+        <div class="popup">
         </div>
         <div class="search-box">
             <div class="select-container">
