--- a/html/main.html
+++ b/html/main.html
@@ -15,12 +15,14 @@
             <div class="header__wrapper header__wrapper_space-between">
                 <i id="menu-bar" class="fa fa-bars fa-2x"></i>
                 <h1>ТЕХНОПАРК</h1>
+                <i id="search-icon" class="fa fa-search fa-2x"></i>
+                <i id="cart-icon" class="fa fa-shopping-cart fa-2x"></i>
                 <span>8 800 755 80 80</span>
                 <input type="search" placeholder="&#xf002; ПОИСК ТОВАРОВ">
                 <a class="header__wrapper_left-offset">ДОСТАВКА И ОПЛАТА</a>
-                <i id="search-icon" class="fa fa-search fa-2x"></i>
-                <i id="cart-icon" class="fa fa-shopping-cart fa-2x"></i>
             </div>
+            <!-- <div class="search-line">
+            </div> -->
             <div id="item-types" class="header__wrapper">
                 <a href="#">МОБИЛЬНЫЕ ТЕЛЕФОНЫ</a>
                 <a href="#">ПЛАНШЕТЫ</a>
@@ -42,7 +44,7 @@
                 <a class="select-container__a"><span class="select-container__span">ЛЮБОГО ТИПА</span></a>
                 <ul class="select-container__ul">
                     <li><a href="#">КОМПАКТ-КАМЕРА</a></li>
-                    <li><a href="#">ЛЮБОГО БРЭНДА</a></li>
+                    <li><a href="#">МЫЛЬНИЦА</a></li>
                 </ul>
             </div>
             <div class="select-container">
