--- a/html/main.html
+++ b/html/main.html
@@ -21,8 +21,9 @@
                 <input type="search" placeholder="&#xf002; ПОИСК ТОВАРОВ">
                 <a class="header__wrapper_left-offset">ДОСТАВКА И ОПЛАТА</a>
             </div>
-            <!-- <div class="search-line">
-            </div> -->
+            <div class="search-line">
+                <hr>
+            </div>
             <div id="item-types" class="header__wrapper">
                 <a href="#">МОБИЛЬНЫЕ ТЕЛЕФОНЫ</a>
                 <a href="#">ПЛАНШЕТЫ</a>
