Added config for webpack, babel

--- a/html/main.html
+++ b/html/main.html
@@ -190,5 +190,5 @@
     </div>
 </body>
 <script src="../js/jquery-3.2.1.js"></script>
-<script type="text/javascript" src="../js/common.js"></script>
+<script type="text/javascript" src="../js/build.js"></script>
 </html>
